--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxss
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxss
@@ -1,9 +1,9 @@
 /* storage/pages/out_of_warehouse/out_of_warehouse.wxss */
-view{overflow: initial;}
+/* view{overflow: initial;} */
 page{background-color: #fff;}
 .wrapper{margin-bottom: 50px;}
 .header{display: flex; align-items: center; justify-content: space-around; padding: 20rpx;}
-.header .tea-img-box{width: 80rpx; height: 80rpx;}
+.header .tea-img-box{width: 40px; height: 40px; overflow: hidden;}
 .header .tea-img-box image{width: 100%; height: 100%;}
 .header .tea-name{font-size: 28rpx; color: #797979; font-weight: 700;}
 .header .tea-date{font-size: 22rpx; color: #333; letter-spacing: 0;}
