--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -116,9 +116,9 @@
       <view class='select_quantity'>
         <view class='subtract' bindtap="bindMinus">-</view>
         <view class='num'>
-          <input type="number {{minusStatus}}" placeholder="" value="{{item.number}}" />
+          <input style=" {{minusStatus}}" type="number" placeholder="" value="{{item.number}}" bindinput='getSearchKey' bindblur='shift_out' />
         </view>
-        <view class='add ' bindtap="bindPlus">+</view>
+        <view class='add ' bindtap="bindPlus"    >+</view>
       </view>
     </view>
   </view>
