--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -161,7 +161,7 @@
                 </view>
               </view>
               <view class='time'>{{item.create_time}}</view>
-              <view class='repays_content' wx:if="{{item.business_repay != '' || item.business_repay != undefined}}">
+              <view class='repays_content' wx:if="{{item.business_repay != '' && item.business_repay != undefined && item.business_repay != null}}">
                 <text class='repay_content_title'>官方回复：</text>
                 <text>{{item.business_repay}}</text>
               </view>
