--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -60,7 +60,7 @@ swiper.swiper-container{height: 93%;}
 .item-right{flex-basis: 63%;}
 .tea-stock{font-size: 24rpx; color: #868686; font-weight: 700; display: flex; align-items: center; justify-content: space-around;}
 .tea-stock .stock-title{font-size: 24rpx; font-weight: 700; color: #000;}
-.tea-stock .stock-num{font-size: 44rpx; font-weight: 700; color: #93291E;}
+.tea-stock .stock-num{font-size: 44rpx; font-weight: 700; color: #93291E; flex: 1; text-align: right;}
 .tea-stock .stock-more{font-size: 24rpx; color: #0099FF;}
 .exchange-price{background-color: #f2f2f2; margin-bottom: 20rpx;}
 .exchange-price text{font-size: 24rpx; color: #6b6b6b;}
