--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxss
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxss
@@ -26,7 +26,9 @@ page{background-color: #fff;}
 .agreement checkbox{box-sizing: border-box;}
 .agreement text{color: #00A0E6; font-weight: 700;}
 .list-item.outNum .list-value{display: flex; align-items: center; color: #811006; font-weight: 700;}
-.list-item.outNum .list-value input{width: 60px; border: 1px solid #811006; border-radius: 3px; box-sizing: border-box; text-align: center; font-weight: normal;}
+.list-item.outNum .list-value input{width: 60px; border: 1px solid #811006; border-radius: 3px; box-sizing: border-box; 
+text-align: center; font-weight: normal;}
+.list-item.outNum .list-value button{font-size: 10px; color: #fff; background-color: #821006;}
 .list-item.freightCost .list-value text{color: #ff6700;}
 .list-item.mailing .list-value{color: #999; text-align: right; padding-right: 30rpx;}
 .list-item.mailing view{flex: 1;}
