--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -19,6 +19,7 @@
         <input class='input_control' password type='number' focus='{{payFocus}}' bindinput='inputPwd' maxlength='6'/>
     </view>
 </view>
+
 <!--content-->
    <view class="nav">
 	   <view class="this"> 普通订单</view>
@@ -34,14 +35,14 @@
 		<view class="title_list {{tab==5? 'on' : ''}}" data-current="5" bindtap="tab_click">待评价</view>
 	</view>
 	<view class='content'>
-		<view class='order_list' wx:for="{{order}}">
+		<view class='order_list' wx:for="{{order}}" wx:key="{{index}}">
 			<view wx:if="{{item.status==1}}">
 				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
 					<view class='box_list_one'>
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>等待买家付款</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -75,7 +76,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>买家已付款</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -108,7 +109,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>卖家已发货</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -142,7 +143,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>交易成功</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -175,7 +176,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>交易成功</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -207,7 +208,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>交易成功</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
@@ -239,7 +240,7 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>交易关闭</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' wx:for="{{item.info}}" wx:key="{{index}}">
 						<view class='img'>
 							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 						</view>
