--- a/pages/invoice/invoice.wxml
+++ b/pages/invoice/invoice.wxml
@@ -7,7 +7,7 @@
             <view class="list_left_two">2018年10月 12日  12:30  </view>
         </view>
             <view class="list_right">
-            <view class="list_right_one"><image class="img" src="http://ptcb077mt.bkt.clouddn.com/u10642.png" mode="widthFix" ></image> </view>
+            <view class="list_right_one"><image class="img" src="http://teahouse.siring.cn/u10642.png" mode="widthFix" ></image> </view>
             <view class="list_right_two">100元  </view>
         </view>
         </view>
