--- a/pages/live/index/index.wxml
+++ b/pages/live/index/index.wxml
@@ -22,23 +22,23 @@
               </view>
               <view class='status_bar'>
                 <view class=''>
-                  <image src='http://ptcb077mt.bkt.clouddn.com/u2133.png' class='tubiao'></image>
+                  <image src='http://teahouse.siring.cn/u2133.png' class='tubiao'></image>
                 </view>
                 <text class='store_name'>仓BJ01</text>
                 <view class=''>
-                  <image src='http://ptcb077mt.bkt.clouddn.com/u5440.png' class='tubiao'></image>
+                  <image src='http://teahouse.siring.cn/u5440.png' class='tubiao'></image>
                 </view>
                 <text class='size'>230</text>
                 <view class=''>
-                  <image src='http://ptcb077mt.bkt.clouddn.com/u5437.png' class='tubiao'></image>
+                  <image src='http://teahouse.siring.cn/u5437.png' class='tubiao'></image>
                 </view>
                 <text class='size'>230</text>
                 <view class=''>
-                  <image src='http://ptcb077mt.bkt.clouddn.com/u5439.png' class='tubiao'></image>
+                  <image src='http://teahouse.siring.cn/u5439.png' class='tubiao'></image>
                 </view>
                 <text class='size'>230</text>
                 <view class=''>
-                  <image src='http://ptcb077mt.bkt.clouddn.com/u5462.png' class='tubiao'></image>
+                  <image src='http://teahouse.siring.cn/u5462.png' class='tubiao'></image>
                 </view>
                 <text class='size_last'>230</text>
               </view>
@@ -56,23 +56,23 @@
                 </view>
                 <view class='status_bar'>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u2133.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u2133.png' class='tubiao'></image>
                   </view>
                   <text class='store_name'>仓BJ01</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5440.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5440.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5437.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5437.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5439.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5439.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5462.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5462.png' class='tubiao'></image>
                   </view>
                   <text class='size_last'>230</text>
                 </view>
@@ -91,23 +91,23 @@
                 </view>
                 <view class='status_bar'>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u2133.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u2133.png' class='tubiao'></image>
                   </view>
                   <text class='store_name'>仓BJ01</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5440.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5440.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5437.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5437.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5439.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5439.png' class='tubiao'></image>
                   </view>
                   <text class='size'>230</text>
                   <view class=''>
-                    <image src='http://ptcb077mt.bkt.clouddn.com/u5462.png' class='tubiao'></image>
+                    <image src='http://teahouse.siring.cn/u5462.png' class='tubiao'></image>
                   </view>
                   <text class='size_last'>230</text>
                 </view>
