--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -17,8 +17,8 @@
 			</view>
 			<view class="moren"  wx:if="{{item.status==1}}" >默认</view>
 			<view class="list3">
-				<image src='http://ptcb077mt.bkt.clouddn.com/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
-				<image src='http://ptcb077mt.bkt.clouddn.com/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
+				<image src='http://teahouse.siring.cn/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
+				<image src='http://teahouse.siring.cn/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
 			</view>
 		</view>
 	</radio-group>
