--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -20,8 +20,8 @@
           <text class="bank_content">{{item.bank_card}}</text>
         </view>
       </view>
-      <image src='http://ptcb077mt.bkt.clouddn.com/u9386.png' class='add_ico' data-id="{{item.id}}" bindtap="go_change_card" mode="widthFix"></image>
-      <image src='http://ptcb077mt.bkt.clouddn.com/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
+      <image src='http://teahouse.siring.cn/u9386.png' class='add_ico' data-id="{{item.id}}" bindtap="go_change_card" mode="widthFix"></image>
+      <image src='http://teahouse.siring.cn/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
     </view>
   </radio-group>
   <view class='add_address' bindtap='go_add_card'>新增银行卡</view>
