--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -6,14 +6,14 @@
       <view class="coupon_content_left">您有以下可适用优惠券</view>
       <view class="coupon_content_right" bindtap="no_use">
         暂时不使用优惠券
-        <image class="retrue_ico" src="http://ptcb077mt.bkt.clouddn.com/u2014.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+        <image class="retrue_ico" src="http://teahouse.siring.cn/u2014.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
       </view>
     </view>
     <view class='order_list' wx:for="{{coupon_order}}" data-id="{{item.id}}" bindtap="checkboxChangess" data-value="{{item.suit_price[0]}}">
       <view class='order_list_content'>
         <checkbox value="{{item.id}}" checked="{{item.checked}}" />
         <view class="coupon_box">
-          <image class="coupon_box_img" src="http://ptcb077mt.bkt.clouddn.com/u11123.png" mode="widthFix"></image>
+          <image class="coupon_box_img" src="http://teahouse.siring.cn/u11123.png" mode="widthFix"></image>
           <view class="coupon_money_box">
             <view>
               <text class="money">{{item.money}}</text>
@@ -83,10 +83,10 @@
         <view class='order-info-title'>{{item.goods_info.goods_name}}</view>
         <view class='order-goods-p'>
         <block wx:for="{{item.goods_info.bq_arr}}" wx:key="{{index}}">
-          <image class="image_bq" style="vertical-align: middle;" src="http://ptcb077mt.bkt.clouddn.com/kecun.png" wx:if="{{item.kc == 1}}"></image>
-          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/hot.png" wx:if="{{item.hot == 1}}"></image>
-          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/chuxiao.png" wx:if="{{item.cx == 1}}"></image>
-          <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/qingchang.png" wx:if="{{item.qc == 1}}"></image>
+          <image class="image_bq" style="vertical-align: middle;" src="http://teahouse.siring.cn/kecun.png" wx:if="{{item.kc == 1}}"></image>
+          <image class="image_bq" src="http://teahouse.siring.cn/hot.png" wx:if="{{item.hot == 1}}"></image>
+          <image class="image_bq" src="http://teahouse.siring.cn/chuxiao.png" wx:if="{{item.cx == 1}}"></image>
+          <image class="image_bq" src="http://teahouse.siring.cn/qingchang.png" wx:if="{{item.qc == 1}}"></image>
           </block>
           <view class="texts" wx:for="{{item.goods_info.goods_sign}}" wx:key="{{index}}">{{item.text}}</view>
           {{item.goods_info.goods_selling}}
@@ -94,7 +94,7 @@
         <view class='unit-price-quantity'>
           <view class='unit-price'>
             <view class='unit-price-img'>
-              <image src='http://ptcb077mt.bkt.clouddn.com/img1.png' mode="scaleToFill"></image>
+              <image src='http://teahouse.siring.cn/img1.png' mode="scaleToFill"></image>
             </view>
             
             <view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}">
@@ -154,7 +154,7 @@
           <view class='direct_mail_add'>{{address}}</view>
         </view>
         <view class='more_img' bindtap='go_direct_mail_address'>
-          <image src='http://ptcb077mt.bkt.clouddn.com/u1959.png'></image>
+          <image src='http://teahouse.siring.cn/u1959.png'></image>
         </view>
       </view>
       <view class="direct_mail {{selected1?'show':'hidden'}}" bindtap='go_shop_address'>
@@ -166,7 +166,7 @@
           <view class='direct_mail_add'>{{shop_address.shop_address}}</view>
         </view>
         <view class='more_img'>
-          <image src='http://ptcb077mt.bkt.clouddn.com/u1959.png'></image>
+          <image src='http://teahouse.siring.cn/u1959.png'></image>
         </view>
       </view>
       <view class="direct_mail {{selected2?'show':'hidden'}}" bindtap='go_save_tea'>
@@ -196,7 +196,7 @@
             </view>
           </view>
           <view class='more_img'>
-            <image src='http://ptcb077mt.bkt.clouddn.com/u1959.png'></image>
+            <image src='http://teahouse.siring.cn/u1959.png'></image>
           </view>
         </view>
       </view>
@@ -217,7 +217,7 @@
     <view class='go_invoice_information'>
       <view>选择仓储年限</view>
       <!-- <view class='more_imgs' bindtap="powerDrawer" data-statu="open">
-				<image src='http://ptcb077mt.bkt.clouddn.com/u1959.png' mode="scaleToFill"></image>
+				<image src='http://teahouse.siring.cn/u1959.png' mode="scaleToFill"></image>
 			</view> -->
       <view class='select_quantity'>
         <view class='subtract' bindtap="bindMinus1">-</view>
@@ -235,7 +235,7 @@
           <checkbox value="选择仓储保险" />
           选择仓储保险
         </label>
-        <image class="tips_img" src="http://ptcb077mt.bkt.clouddn.com/u927.png" mode="widthFix"></image>
+        <image class="tips_img" src="http://teahouse.siring.cn/u927.png" mode="widthFix"></image>
         <view class="" class="tips_content">*可选项，默认1年</view>
         <view class='invoice_money text_red'>¥ 0.00</view>
       </view>
@@ -244,7 +244,7 @@
     <view class='go_invoice_information'>
       <view>请选择保险年限</view>
       <!-- <view class='more_imgs' bindtap="powerDrawer" data-statu="open">
-				<image src='http://ptcb077mt.bkt.clouddn.com/u1959.png' mode="scaleToFill"></image>
+				<image src='http://teahouse.siring.cn/u1959.png' mode="scaleToFill"></image>
 			</view> -->
       <view class='select_quantity'>
         <view class='subtract' bindtap="bindMinus2">-</view>
@@ -272,7 +272,7 @@
         {{company}}
       </view>
       <view class='more_imgs'>
-        <image src='http://ptcb077mt.bkt.clouddn.com/u1959.png' mode="scaleToFill"></image>
+        <image src='http://teahouse.siring.cn/u1959.png' mode="scaleToFill"></image>
       </view>
     </view>
   </view>
