--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,10 @@
 /**app.wxss**/
 @import "/wxParse/wxParse.wxss";
 
-
+.canvas {
+    width: 100%;
+    height: 200px;
+}
 .clear{
   overflow: hidden;
 }
