--- a/storage/pages/zcSettle/zcSettle.wxml
+++ b/storage/pages/zcSettle/zcSettle.wxml
@@ -103,7 +103,7 @@
       <view class='select_quantity'>
         <view class='subtract' bindtap="bindMinus">-</view>
         <view class='num'>
-          <input type="number" placeholder="" value="{{item.number}}" />
+          <input type="number" placeholder="" value="{{item.number}}" bindinput='getSearchKey' bindblur='shift_out' />
         </view>
         <view class='add' bindtap="bindPlus">+</view>
       </view>
