--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -9,7 +9,7 @@
                 <text class="phone">{{order.phone_num}}</text>
             </view>
             <view class="address_detail">
-                地址：{{order.address}}     
+                地址：{{order.data[0].harvester_address}}     
             </view>
         </view>
     </view>
@@ -30,11 +30,12 @@
         <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
             <view class="name_phone">
+                <text class="name">自提点： </text>
                 <text class="name">{{order.name}} </text>
-                <text class="phone">{{order.phone_num}}</text>
+                <text class="phone">{{order.data[0].harvest_phone_num}}</text>
             </view>
             <view class="address_detail">
-                地址：{{order.address}}     
+                地址：{{order.data[0].harvester_address}}     
             </view>
         </view>
     </view>
@@ -46,7 +47,31 @@
         </view>
         <view class="left">
                 <image class="zy_ico" src="http://teahouse.siring.cn/u8165.png" mode="widthFix"></image>
-                <text class="zy_text">直邮</text>
+                <text class="zy_text">到店自提</text>
+        </view>
+    </view>
+</view>
+<view wx:elif="{{order.order_type==3}}">
+    <view class="address">
+        <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
+        <view class="address_content">
+            <view class="name_phone">
+                <text class="name">仓储点： </text>
+            </view>
+            <view class="address_detail">
+                仓储地址：{{order.data[0].harvester_address}}     
+            </view>
+        </view>
+    </view>
+    <view class="other_infor">
+        <view class="time">
+            <view class="time_title">订单时间</view>
+            <view class="create_time"> 创建时间：{{order.create_time}}</view>
+            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+        </view>
+        <view class="left">
+                <image class="zy_ico" src="http://teahouse.siring.cn/u8165.png" mode="widthFix"></image>
+                <text class="zy_text">存茶</text>
         </view>
     </view>
 </view>
@@ -124,7 +149,7 @@
                 </view>
                 <view class='box_list_four'>
                     <view class="flex" style="justify-content:flex-start;">
-                        <view class="courier">{{item.express_name}}：{{item.courier_number}}</view>
+                        <view class="courier">{{item.express_name_ch}}：{{item.courier_number}}</view>
                          <view class="more_look" bindtap="go_logistics" data-id="{{item.id}}">查看物流></view>
                     </view>
                 </view>
@@ -238,4 +263,39 @@
 
     </view>
 </view>
+<view class="{{selected2?'sundry':'sundry1'}}" >
+    <view class='sundry-li1' style=' border-bottom: solid 1rpx #E4E4E4;'>
+      <view>商品总价</view>
+      <view>
+        <text style='color:#FF7E4A;'>{{all_money}}元</text>
+      </view>
+    </view>
+    <view class='sundry-li'>
+      <view class='text_red'>优惠券</view>
+      <view wx:if="{{coupon_show==1}}" bindtap="go_coupon">
+        <text style='color:#FF7E4A;'>{{coupon_deductible}}</text>
+      </view>
+      <view wx:else>
+        <text style='color:#FF7E4A;'>无可适用优惠券</text>
+      </view>
+    </view>
+    <view class="sundry-li {{selected?'show':'hidden'}}">
+      <view>运费</view>
+      <view>
+        <text style='color:#FF7E4A;'>{{freight}}元</text>
+      </view>
+    </view>
+    <view class='sundry-li'>
+      <view>税费</view>
+      <view>
+        <text style='color:#FF7E4A;'>{{receipt_price}}元</text>
+      </view>
+    </view>
+    <view class="sundry-li {{selected2?'show':'hidden'}}">
+      <view>仓储费</view>
+      <view>
+        <text style='color:#FF7E4A;'>{{storage}}元</text>
+      </view>
+    </view>
+  </view>
 </view>
