--- a/pages/order_detail/order_detail.wxss
+++ b/pages/order_detail/order_detail.wxss
@@ -183,3 +183,32 @@ margin-left: 100rpx;
     font-size: 26rpx;
     border-radius:13rpx;
   }
+  .sundry {
+    background: #fff;
+    margin-top: 4rpx;
+  }
+  
+  .sundry1 {
+    background: #fff;
+    margin-top: 4rpx;
+  
+  }
+  .sundry-li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 23rpx;
+    font-size: 26rpx;
+  }
+  
+  .sundry-li1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 23rpx;
+    font-size: 26rpx;
+    border-top: solid 2px #e4e4e4;
+  }
+  .hidden {
+    display: none;
+  }
