--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -29,8 +29,10 @@
     <view class="address">
         <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
+            <view class="lift">
+                <text>自提点：</text>     
+            </view>
             <view class="name_phone">
-                <text class="name">自提点： </text>
                 <text class="name">{{order.name}} </text>
                 <text class="phone">{{order.data[0].harvest_phone_num}}</text>
             </view>
@@ -46,7 +48,7 @@
             <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
         </view>
         <view class="left">
-                <image class="zy_ico" src="http://teahouse.siring.cn/u8165.png" mode="widthFix"></image>
+                <image class="zy_ico" src="http://teahouse.siring.cn/u8483.png" mode="widthFix"></image>
                 <text class="zy_text">到店自提</text>
         </view>
     </view>
@@ -55,8 +57,8 @@
     <view class="address">
         <image src="http://teahouse.siring.cn/u6095.png" mode="widthFix"  class="address_ico"/>
         <view class="address_content">
-            <view class="name_phone">
-                <text class="name">仓储点： </text>
+            <view class="lift">
+                <text>仓储点： </text>
             </view>
             <view class="address_detail">
                 仓储地址：{{order.data[0].harvester_address}}     
@@ -70,7 +72,7 @@
             <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
         </view>
         <view class="left">
-                <image class="zy_ico" src="http://teahouse.siring.cn/u8165.png" mode="widthFix"></image>
+                <image class="zy_ico" src="http://teahouse.siring.cn/u7044.png" mode="widthFix"></image>
                 <text class="zy_text">存茶</text>
         </view>
     </view>
