--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxml
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxml
@@ -1,72 +1,71 @@
 <!-- storage/pages/out_of_warehouse/out_of_warehouse.wxml -->
 <view class="wrapper">
-    <view class="header">
-        <view class="tea-img-box"><image src="{{url}}{{orderInfo.goods_image}}" class="tea-img" /></view>
-        <view>
-            <view class="tea-name">{{orderInfo.brand}}</view>
-            <view class="stock-addr">{{orderInfo.store_name}}</view>
-            <!-- <view class="tea-date">生产日期:2018.03.05</view> -->
+  <view class="header">
+    <view class="tea-img-box">
+      <image src="{{url}}{{orderInfo.goods_image}}" class="tea-img" />
+    </view>
+    <view>
+      <view class="tea-name">{{orderInfo.brand}}</view>
+      <view class="stock-addr">{{orderInfo.store_name}}</view>
+      <!-- <view class="tea-date">生产日期:2018.03.05</view> -->
+    </view>
+    <view class="stock-container">
+      <view class="real-time-stock">
+        <view class="real-time-title">您的实时存茶</view>
+        <view class="stock-box">
+          <text class="stock-num" wx:if="{{orderInfo.store_number[0]}}">{{orderInfo.store_number[0]}}</text>
+          <text>{{orderInfo.store_number[1]?orderInfo.store_number[1]:''}}</text>
+          <text class="stock-num" wx:if="{{orderInfo.store_number[2]}}">{{orderInfo.store_number[2]}}</text>
+          <text>{{orderInfo.store_number[3]?orderInfo.store_number[3]:''}}</text>
+          <text class="stock-num" wx:if="{{orderInfo.store_number[4]}}">{{orderInfo.store_number[4]}}</text>
+          <text>{{orderInfo.store_number[5]?orderInfo.store_number[5]:''}}</text>
         </view>
-        <view class="stock-container">
-            <view class="real-time-stock">
-                <view class="real-time-title">您的实时存茶</view>
-                <view class="stock-box">
-                    <text class="stock-num" wx:if="{{orderInfo.store_number[0]}}">{{orderInfo.store_number[0]}}</text>
-                    <text>{{orderInfo.store_number[1]?orderInfo.store_number[1]:''}}</text>
-                    <text class="stock-num" wx:if="{{orderInfo.store_number[2]}}">{{orderInfo.store_number[2]}}</text>
-                    <text>{{orderInfo.store_number[3]?orderInfo.store_number[3]:''}}</text>
-                    <text class="stock-num" wx:if="{{orderInfo.store_number[4]}}">{{orderInfo.store_number[4]}}</text>
-                    <text>{{orderInfo.store_number[5]?orderInfo.store_number[5]:''}}</text>
-                </view>
-            </view>
-            <!-- <image src="./img/icon1.png" class="icon-more" /> -->
-        </view>
+      </view>
+      <!-- <image src="./img/icon1.png" class="icon-more" /> -->
     </view>
-    <view class="list-item">
-        <view class="list-key">生产日期</view>
-        <view class="list-value">{{orderInfo.date}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">生产日期</view>
+    <view class="list-value">{{orderInfo.date}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">入仓日期</view>
+    <view class="list-value">{{orderInfo.pay_time}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">到期日期</view>
+    <view class="list-value">{{orderInfo.end_time}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">包装规格
+      <text class="explain">?</text>
     </view>
-    <view class="list-item">
-        <view class="list-key">入仓日期</view>
-        <view class="list-value">{{orderInfo.pay_time}}</view>
+    <view class="list-value">
+      <text wx:if="{{orderInfo.num[0]}}">{{orderInfo.num[0]}}{{orderInfo.unit[0]}};</text>
+      <text wx:if="{{orderInfo.num[1]}}">{{orderInfo.num[1]}}{{orderInfo.unit[1]}};</text>
+      <text wx:if="{{orderInfo.num[2]}}">{{orderInfo.num[2]}}{{orderInfo.unit[2]}}</text>
     </view>
-    <view class="list-item">
-        <view class="list-key">到期日期</view>
-        <view class="list-value">{{orderInfo.end_time}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">当前参考价
+      <text class="explain">?</text>
     </view>
-    <view class="list-item">
-        <view class="list-key">
-            包装规格
-            <text class="explain">?</text>
-        </view>
-        <view class="list-value">
-            <text wx:if="{{orderInfo.num[0]}}">{{orderInfo.num[0]}}{{orderInfo.unit[0]}};</text>
-            <text wx:if="{{orderInfo.num[1]}}">{{orderInfo.num[1]}}{{orderInfo.unit[1]}};</text>
-            <text wx:if="{{orderInfo.num[2]}}">{{orderInfo.num[2]}}{{orderInfo.unit[2]}}</text>
-        </view>
+    <view class="list-value price">￥{{orderInfo.goods_bottom_money}}/{{orderInfo.unit[0]}}</view>
+  </view>
+  <view class="list-item">
+    <view class="list-key">初始购入价
+      <text class="explain">?</text>
     </view>
-    <view class="list-item">
-        <view class="list-key">
-            当前参考价
-            <text class="explain">?</text>
-        </view>
-        <view class="list-value price">￥{{orderInfo.goods_bottom_money}}/{{orderInfo.unit[0]}}</view>
-    </view>
-    <view class="list-item">
-        <view class="list-key">
-            初始购入价
-            <text class="explain">?</text>
-        </view>
-        <view class="list-value">￥{{orderInfo.goods_money}}/{{orderInfo.store_unit}}×{{orderInfo.order_quantity}}</view>
-    </view>
-    <!-- <view class="list-item">
+    <view class="list-value">￥{{orderInfo.goods_money}}/{{orderInfo.store_unit}}×{{orderInfo.order_quantity}}</view>
+  </view>
+  <!-- <view class="list-item">
         <view class="list-key">
             出仓属性
             <text class="explain">?</text>
         </view>
         <view class="list-value">整存整取</view>
     </view> -->
-    <!-- <view class="list-item">
+  <!-- <view class="list-item">
         <view class="list-key">
             出仓方式
             <text class="explain">?</text>
@@ -83,77 +82,79 @@
             </view>
         </view>
     </view> -->
-    <view class="list-item outNum">
-        <view class="list-key">
-            出仓数量
-            <text class="explain">?</text>
-        </view>
-        <view class="list-value">
-            <block wx:if="{{!conversion}}">
-                <input type="number" bindblur="bindManual" value="{{outNum}}" />
-                片
-            </block>
-            <block wx:else>
-                {{conversionStr}}
-                <button bind:tap="reset">重置</button>
-            </block>
-        </view>
+  <view class="list-item outNum">
+    <view class="list-key">出仓数量
+      <text class="explain">?</text>
     </view>
-    <view class="list-item mailing">
-        <view class="list-key">直邮地址</view>
-        <view class="list-value address" bind:tap="toAddressList">
-            <!-- <text class="icon-more"> > </text> -->
-            <image src="./img/icon1.png" class="icon-more" />
-            <text wx:if="{{!defaultAddress}}">请选择邮寄地址</text>
-            <view wx:else>
-                <view>
-                    <text>{{defaultAddress.harvester_phone_num}} {{defaultAddress.harvester}}</text>
-                </view>
-                <view>
-                    {{defaultAddress.address_name}} {{defaultAddress.harvester_real_address}}
-                </view>
-            </view>
-        </view>
+    <view class="list-value">
+      <block wx:if="{{!conversion}}">
+        <input type="number" bindblur="bindManual" value="{{outNum}}" /> 片
+      </block>
+      <block wx:else>
+        {{conversionStr}}
+        <button bind:tap="reset">重置</button>
+      </block>
     </view>
-    <view class="list-item freightCost">
-        <view class="list-key">出仓运费</view>
-        <view class="list-value">
-            应付
-            <text>{{postage}}元</text>
+  </view>
+  <view class="list-item mailing">
+    <view class="list-key">直邮地址</view>
+    <view class="list-value address" bind:tap="toAddressList">
+      <!-- <text class="icon-more"> > </text> -->
+      <image src="./img/icon1.png" class="icon-more" />
+      <text wx:if="{{!defaultAddress}}">请选择邮寄地址</text>
+      <view wx:else>
+        <view>
+          <text>{{defaultAddress.harvester_phone_num}} {{defaultAddress.harvester}}</text>
         </view>
+        <view>
+          {{defaultAddress.address_name}} {{defaultAddress.harvester_real_address}}
+        </view>
+      </view>
     </view>
-    <!-- <view class="agreement">
+  </view>
+  <view class="list-item freightCost">
+    <view class="list-key">出仓运费</view>
+    <view class="list-value">
+      应付
+      <text>{{postage}}元</text>
+    </view>
+  </view>
+  <!-- <view class="agreement">
         <label>
             <checkbox />
             我已阅读
             <text>《某某协议》</text>
         </label>
     </view> -->
-    <!-- <button class="btn">确定出仓</button> -->
+  <!-- <button class="btn">确定出仓</button> -->
 </view>
 <view class="ft">
-    <view class="outCost">
-        出仓运费
-        <text>{{postage}}元</text>
-    </view>
-    <view class="outBtn" bind:tap="payment">确认出仓</view>
+  <view class="outCost">
+    出仓运费
+    <text>{{postage}}元</text>
+  </view>
+  <view class="outBtn" bind:tap="payment">确认出仓</view>
 </view>
 
 <!-- 余额支付 -->
 <view wx:if='{{showPayPwdInput}}'>
-	<view class='bg_layer'></view>
-	<view class='input_main'>
-		<view class='input_title'>
-			<view class='input_back' catchtap='hidePayLayer'><text></text></view>
-			<text>输入支付密码</text>
-		</view>
-		<view class='input_tip'><text>请输入账户余额支付密码</text></view>
-		<view class='input_row' catchtap='getFocus'>
-			<view class='pwd_item' wx:for='{{6}}' wx:key='item' wx:for-index='i'>
-				<text wx:if='{{pwdVal.length>i}}'></text>
-			</view>
-		</view>
-		<view class='forget_pwd' catchtap='forget_password'>忘记密码</view>
-		<input class='input_control' password type='number' focus='{{payFocus}}' bindinput='inputPwd' maxlength='6' />
-	</view>
+  <view class='bg_layer'></view>
+  <view class='input_main'>
+    <view class='input_title'>
+      <view class='input_back' catchtap='hidePayLayer'>
+        <text></text>
+      </view>
+      <text>输入支付密码</text>
+    </view>
+    <view class='input_tip'>
+      <text>请输入账户余额支付密码</text>
+    </view>
+    <view class='input_row' catchtap='getFocus'>
+      <view class='pwd_item' wx:for='{{6}}' wx:key='item' wx:for-index='i'>
+        <text wx:if='{{pwdVal.length>i}}'></text>
+      </view>
+    </view>
+    <view class='forget_pwd' catchtap='forget_password'>忘记密码</view>
+    <input class='input_control' password type='number' focus='{{payFocus}}' bindinput='inputPwd' maxlength='6' />
+  </view>
 </view>
